screen white space issue fixed in desktop

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
- 
-
 /* App.css */
 .AppContainer {
   display: flex;
@@ -18,9 +16,9 @@
 @media (min-width: 768px) {
   .AppContainer {
     padding: 2rem;
-    flex-direction: row;
+    /* flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-between; */
   }
 }
 
